@@ -76,6 +76,10 @@ MIME Viewer Options (mime_drivers.php)
 The ZIP driver now does not show the contents of the ZIP file by default. Set
 the 'show_contents' option to true to restore the old behavior.
 
+The Images driver will now automatically try to rotate JPEG images when
+displayed inline. Set the 'rotate_inline' option to false to restore the old
+behavior (display as-is).
+
 Added the TGZ (tar/gzip) driver.
 
 
